hphp/hack/test/typecheck/classname/new_generic.php.exp
File "new_generic.php", line 13, characters 3-16:
  <expr#1> as Tobj
File "new_generic.php", line 18, characters 3-32:
  ^(C<int>)
File "new_generic.php", line 19, characters 3-38:
  ^(C<int>)
File "new_generic.php", line 19, characters 11-19:
Some type constraint(s) here are violated (Typing[4110])
File "new_generic.php", line 8, characters 26-29:
'Tobj' is a constrained type
File "new_generic.php", line 17, characters 35-37:
This is an int
File "new_generic.php", line 19, characters 29-36:
It is incompatible with a string
File "new_generic.php", line 8, characters 36-39:
Considering that this type argument is invariant with respect to C
